fix: alignment and scaling in introbox
Add aling items to container and removed formating
 to image. align top of hero text.

--- a/style.css
+++ b/style.css
@@ -43,12 +43,15 @@
     background-color: #1f2937;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 15%;
     padding: 100px 15%;
        
 }
 
+
 .herobox h1  {
+    margin-top: 0;
     margin-bottom: 5px;
     color: #e5e7eb;     
 }
@@ -64,5 +67,4 @@
 }
 .heroimage  {
     width: 500px;
-    object-fit:scale-down;
 }
